<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_category"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:useDefaultMargins="true">

    <Button
        android:id="@+id/btn_general"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/general"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_business"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/business"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_entertainment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/entertainment"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/health"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_science"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/science"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_sports"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/sports"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_technology"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/technology"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_all_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/all_category"
        android:textColor="@color/white"
        android:textSize="12sp"/>
    </GridLayout>

</LinearLayout>